--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     />
     <!-- App CSS -->
     <link rel="stylesheet" href="style.css" />
-    <title>SuccesfullSites | Agency Website</title>
+    <title>Crew Cortex</title>
   </head>
   <body>
     <div class="app">
